@@ -48,6 +48,7 @@ $session->{current_user} = EPrints::DataObj::User::user_with_username( $session,
 
 $opts{format} = $session->param( "format" );
 $opts{filename} = $session->param( "filename" );
+$opts{field} = $session->param( "field" );
 
 my $eprintid = $session->param( "eprint" );
 if( EPrints::Utils::is_set( $eprintid ) )
